<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  android:title="@string/preferences">
    <ListPreference
            android:key="quickadd_account"
            android:title="@string/default_account"/>
    <PreferenceCategory
            android:title="@string/account_defaults"
            android:key="account_defaults">
        <fr.geobert.radis.tools.DayEditTextPreference
                android:dialogTitle="@string/prefs_insertion_date_title"
                android:positiveButtonText="@string/ok"
                android:negativeButtonText="@string/cancel"
                android:title="@string/prefs_insertion_date_label"
                android:key="insertion_date"
                android:summary="@string/prefs_insertion_date_text"
                android:inputType="number"
                android:persistent="true"/>
        <EditTextPreference
                android:dialogTitle="@string/prefs_nb_month_ahead_title"
                android:positiveButtonText="@string/ok"
                android:negativeButtonText="@string/cancel"
                android:title="@string/prefs_nb_month_ahead_title"
                android:summary="@string/prefs_nb_month_ahead_text"
                android:key="nb_month_ahead"
                android:inputType="number"
                android:persistent="true"/>
        <CheckBoxPreference
                android:key="hide_ops_quick_add"
                android:title="@string/hide_ops_quick_add"
                android:summary="@string/hide_ops_quick_add_details"/>
        <CheckBoxPreference
                android:key="use_weighted_infos"
                android:title="@string/use_weighted_infos"
                android:summary="@string/use_weighted_infos_details"
                android:defaultValue="true"/>
        <CheckBoxPreference
                android:key="invert_completion_in_quick_add"
                android:title="@string/invert_completion_in_quick_add"
                android:summary="@string/invert_completion_in_quick_add_details"
                android:defaultValue="true"/>
        <ListPreference
                android:key="quick_add_long_press_action"
                android:title="@string/quick_add_long_press_action_title"
                android:summary="@string/quick_add_long_press_action_text"
                android:entries="@array/quickadd_actions"
                android:entryValues="@array/quickadd_actions_values"
                android:defaultValue="0"/>
    </PreferenceCategory>
</PreferenceScreen>
