<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:padding="5dp"
            android:background="@color/normal_bg"
            android:fillViewport="true">

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

        <EditText
                android:id="@+id/edit_account_name"
                style="@style/EditorEditText"
                android:hint="@string/name"/>

        <EditText
                android:id="@+id/edit_account_start_sum"
                style="@style/EditorEditText.Sum"
                android:hint="@string/start_sum"/>

        <TextView
                style="@style/EditorTextView"
                android:text="@string/currency"/>

        <Spinner
                android:id="@+id/currency_spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawSelectorOnTop="true"
                android:prompt="@string/account_prompt">
        </Spinner>

        <EditText
                android:id="@+id/custom_currency"
                style="@style/EditorEditText"
                android:maxLength="3"
                android:layout_marginBottom="5dip"
                android:hint="@string/custom_currency_hint"/>

        <TextView
                style="@style/EditorTextView"
                android:text="@string/projection_date"/>

        <Spinner
                android:id="@+id/projection_date_spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawSelectorOnTop="true"
                android:prompt="@string/projection_date_mode"/>

        <EditText
                android:id="@+id/projection_date_value"
                style="@style/EditorEditText.Date"
                android:inputType="number"
                android:layout_marginBottom="5dip"/>

        <EditText
                android:id="@+id/edit_account_desc"
                style="@style/DescEditText"
                android:hint="@string/description"/>
    </LinearLayout>
</ScrollView>
