<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:id="@+id/main_content"
            android:fillViewport="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/normal_bg">

    <LinearLayout
            android:id="@+id/edit_op_root"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:text="@string/current_account"
                    android:textSize="18sp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"

                    android:id="@+id/account_name_lbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:text="Test"
                    android:textSize="18sp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:id="@+id/account_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
        </LinearLayout>


        <Button
                android:id="@+id/op_date_btn"
                android:text="lun. 04 Sept 2015"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"/>

        <LinearLayout
                style="@style/EditorHorizontalLinearLayout"
                android:layout_marginTop="0dp">

            <CheckBox
                    android:id="@+id/is_transfert"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="3dp"
                    android:layout_weight="1"
                    android:text="@string/transfert"/>

            <CheckBox
                    android:id="@+id/is_checked"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="3dp"
                    android:layout_weight="1"
                    android:text="@string/checked"/>

        </LinearLayout>

        <LinearLayout
                android:id="@+id/transfert_cont"
                android:layout_margin="0dp"
                style="@style/EditorHorizontalLinearLayout">

            <Spinner
                    android:id="@+id/trans_src_account"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="0dp"
                    android:text="@string/rarr"
                    android:textSize="20dp"/>

            <Spinner
                    android:id="@+id/trans_dst_account"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
        </LinearLayout>

        <RelativeLayout
                android:id="@+id/sched_op_section"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <LinearLayout
                    android:id="@+id/sched_op_section_"
                    android:orientation="vertical"
                    android:background="@drawable/border"
                    android:layout_marginTop="12dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:padding="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="8dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/periodicity"/>

                    <Spinner
                            android:id="@+id/periodicity_choice"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"/>
                </LinearLayout>

                <LinearLayout
                        android:id="@+id/custom_periodicity"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginLeft="5dp"
                        android:gravity="center_vertical"
                        android:visibility="gone">

                    <TextView
                            android:id="@+id/custom_periodicity_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/every"/>

                    <EditText
                            android:id="@+id/custom_periodicity_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:minEms="2"/>

                    <Spinner
                            android:id="@+id/custom_periodicity_choice"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"/>
                </LinearLayout>

                <CheckBox
                        android:id="@+id/end_date_check"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/end_date"/>

                <Button
                        android:id="@+id/sch_op_date_btn"
                        android:text="lun. 04 Sept 2015"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"/>
            </LinearLayout>

            <TextView
                    android:id="@+id/sched_op_section_lbl"
                    android:text="@string/scheduling"
                    android:textSize="16sp"
                    android:background="@color/normal_bg"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="20dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>


        </RelativeLayout>

        <LinearLayout
                android:id="@+id/third_party_cont"
                style="@style/EditorHorizontalLinearLayout">

            <fr.geobert.radis.tools.MyAutoCompleteTextView
                    android:id="@+id/edit_op_third_party"
                    style="@style/EditorEditText"
                    android:completionThreshold="1"
                    android:hint="@string/third_party"/>

            <ImageButton
                    android:id="@+id/edit_op_third_parties_list"
                    android:contentDescription="@string/third_parties"
                    style="@style/EditorImageButton"
                    android:src="@drawable/list_48"/>
        </LinearLayout>

        <LinearLayout style="@style/EditorHorizontalLinearLayout">

            <EditText
                    android:id="@+id/edit_op_sum"
                    style="@style/EditorEditText.Sum"
                    android:hint="@string/sum"/>

            <ImageButton
                    android:id="@+id/edit_op_sign"
                    android:contentDescription=""
                    style="@style/EditorImageButton"
                    android:src="@drawable/invert_sign_48"/>
        </LinearLayout>

        <LinearLayout style="@style/EditorHorizontalLinearLayout">

            <fr.geobert.radis.tools.MyAutoCompleteTextView
                    android:id="@+id/edit_op_tag"
                    style="@style/EditorEditText"
                    android:completionThreshold="1"
                    android:hint="@string/tag"/>

            <ImageButton
                    android:id="@+id/edit_op_tags_list"
                    android:contentDescription=""
                    style="@style/EditorImageButton"
                    android:src="@drawable/list_48"/>
        </LinearLayout>

        <LinearLayout style="@style/EditorHorizontalLinearLayout">

            <fr.geobert.radis.tools.MyAutoCompleteTextView
                    android:id="@+id/edit_op_mode"
                    style="@style/EditorEditText"
                    android:completionThreshold="1"
                    android:hint="@string/mode"/>

            <ImageButton
                    android:id="@+id/edit_op_modes_list"
                    android:contentDescription=""
                    android:src="@drawable/list_48"
                    style="@style/EditorImageButton"/>
        </LinearLayout>

        <EditText
                android:id="@+id/edit_op_notes"
                style="@style/DescEditText"
                android:hint="@string/notes"/>

    </LinearLayout>
</ScrollView>
